--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
 /* Customize your main colors in :root variables */
 :root {
-  --main-background-color: #343A50;
-  --card-background-color: #804980;
-  --countdown-background-color: #433765;
-  --main-text-color:#F7F6F4;
-  --title-text-color:#3CBA8B;
+  --main-background-color: #000000;
+  --card-background-color: #000000;
+  --countdown-background-color: #000000;
+  --main-text-color:#ffffff;
+  --title-text-color:#ffffff;
 }
 
 body{
 /*  background-color:var(--main-background-color);*/
-  background: url("img/background.png");
-  background-size: cover;
-  font-family: 'Patrick Hand', cursive;
+  /* background: url("img/background.png"); */
+  /* background-size: cover; */
+  font-family: 'Helvetica';
   font-size: 1.1em;
 }
 
